# sessayment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
penelitian/: manage.py  package.json  vite.config.js
penelitian/penelitian/: asgi.py  settings.py  urls.py  wsgi.py
sessayment/: manage.py  package.json  tailwind.config.js
sessayment/SimpleTR/: Model.py  main.py
sessayment/custom_admin/: admin.py  decorators.py  form.py  models.py  urls.py  views.py
sessayment/custom_admin/migrations/: 0001_initial.py  0002_alter_account_username.py  0003_auto_20231010_0903.py
sessayment/dosen/: form.py  models.py  urls.py  views.py
sessayment/dosen/migrations/: 0001_initial.py  0002_auto_20231010_0903.py
sessayment/mahasiswa/: models.py  urls.py  views.py
sessayment/mahasiswa/migrations/: 0001_initial.py  0002_auto_20231010_0903.py
sessayment/sessayment/: asgi.py  form.py  settings.py  urls.py  views.py  wsgi.py
sessayment/src/assets/js/: app.js  function.js  timer.js
