[tool.poetry]
name = "sessayment"
version = "0.1.0"
description = "This is apps for research in automatic essay assesment"
authors = ["bagussr <bagusssyamsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.3"
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile="django"
